# sistema_votacion

./: .gitignore  Cargo.toml  README.md  lib.rs
reporte/: .gitignore  Cargo.toml  lib.rs
reporte/sistema_votacion/: Cargo.toml  lib.rs
