[package]
name = "votaciones"
version = "0.1.0"
authors = ["[Agustin Castillo] <[Agustincasti2002@gmail.com]>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
ink = { version = "5.0.0", default-features = false }
ink_env = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.12", default-features = false }


[dev-dependencies]
scale-info = "2.11.3"
ink_e2e = { version = "5.0.0" }


[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std"]
ink-as-dependency = []
e2e-tests = []
